adding simple status & connection field - no dialog yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="expression">Expression</string>
     <string name="zero">0</string>
     <string name="bend">Bend</string>
+    <string name="disconnected">Not connected</string>
 </resources>
