--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="zero">0</string>
     <string name="bend">Bend</string>
     <string name="disconnected">Not connected</string>
+    <string name="midi_port">midi port</string>
+    <string name="midi_destinations_available">MIDI destinations available:</string>
+    <string name="ok">OK</string>
 </resources>
